<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bakr</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="more_handle">More</string>
    <string name="showimage1">Display first image</string>
    <string name="showimage2">Display second image</string>
    <string name="showwhite">Show white</string>
    <string name="showblack">Show black</string>
    <string name="showalert">Show alert</string>
    <string name="strCity">This stuff</string>
    <string name="strWeather">This other stuff</string>
    <color name="background1">#FFFFFF</color>
    <color name="background2">#000000</color>

</resources>
